# automeister

./: .gitignore  README.md  pyproject.toml
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CLI.md  MACROS.md  MCP.md  SPEC.md
docs/examples/: arrange-windows.yaml  screenshot-loop.yaml  wait-and-click.yaml
src/automeister/: __init__.py  __main__.py  cli.py  config.py  logging.py  mcp_server.py
src/automeister/actions/: __init__.py  app.py  image.py  keyboard.py  mouse.py  ocr.py  screen.py  util.py  window.py
src/automeister/macro/: __init__.py  context.py  executor.py  parser.py
src/automeister/utils/: __init__.py  process.py
tests/: __init__.py  test_macro_context.py  test_macro_parser.py
